# MailingService

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
newsletter/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
newsletter/management/commands/: start_program.py
newsletter/migrations/: 0001_initial.py  0002_alter_newsletter_client_alter_newsletter_message_and_more.py  0003_alter_mailingattempt_status.py  0004_remove_newsletter_date_time_newsletter_end_time_and_more.py  0005_rename_server_responce_mailingattempt_server_response.py  0006_alter_mailingattempt_date_time.py  0007_client_owner_message_owner_newsletter_owner.py  0008_alter_message_owner.py  0009_alter_mailingattempt_newsletter_alter_message_owner.py  0010_alter_newsletter_options.py  0011_alter_newsletter_options.py
newsletter/templates/: base.html
newsletter/templates/newsletter/: attempts.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_confirm_delete.html  (+3 more)
static/css/: blog.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_token.py  0003_user_token.py  0004_user_login.py  0005_alter_user_login.py  0006_alter_user_options.py
(+6 files in other folders)
